# nexora-ai

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  build_errors.txt  clippy.toml  deny.toml  docker-compose.yml  nextest.toml  rust-toolchain.toml  rustfmt.toml  session-ses_1d0a.md
apps/dashboard/: Cargo.toml
apps/dashboard/src/: main.rs
apps/nexora-ai/: Cargo.toml
apps/nexora-ai/examples/: basic_usage.rs  chat_example.rs  server_example.rs
apps/nexora-ai/src/: error.rs  lib.rs  main.rs
apps/nexora-ai/static/: index.html
apps/nexora-ai/tests/: integration_tests.rs
crates/agent/: Cargo.toml
crates/agent/src/: agent_manager.rs  base_agent.rs  communication.rs  context_agent.rs  inference_agent.rs  lib.rs  lifecycle.rs  memory_agent.rs  planner_agent.rs  registry.rs  response_agent.rs  routing_agent.rs  state.rs  validation_agent.rs
crates/alignment/: Cargo.toml
crates/alignment/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  metrics.rs  middleware.rs  routing.rs  security.rs  server.rs
crates/api/tests/: api_integration.rs
crates/atqs/: Cargo.toml
crates/atqs/src/: config.rs  error.rs  foundation.rs  lib.rs  prelude.rs  tensor.rs  types.rs
crates/blaa/: Cargo.toml
crates/blaa/src/: auth.rs  client.rs  config.rs  lib.rs
crates/cognition/: Cargo.toml
crates/cognition/src/: context.rs  lib.rs  planning.rs  reasoning.rs  reflection.rs
crates/core/: Cargo.toml
crates/core/src/: async_executor.rs  context.rs  controller.rs  coordination.rs  error.rs  error_recovery.rs  fusion.rs  input.rs  intent.rs  lib.rs  ml_intent.rs  task.rs  tests.rs  types.rs  utils.rs
crates/data/: Cargo.toml
crates/data/metadata/: Anthropic__hh-rlhf.json  HuggingFaceH4__no_robots.json  databricks__databricks-dolly-15k.json  ise-uiuc__Magicoder-OSS-Instruct-75K.json  meta-math__MetaMathQA.json  openai__gsm8k.json  sahil2801__CodeAlpaca-20k.json
crates/data/mixed_llm_dataset/: dataset_manifest.json
crates/data/src/: corpus_collector.rs  deduplicator.rs  domain_splitter.rs  lib.rs  pipeline.rs  quality_classifier.rs  quality_filter.rs  synthetic_generator.rs  token_mixer.rs  token_packer.rs
crates/database/: Cargo.toml  README.md  init.sql
crates/database/src/: connection_pool.rs  credentials.rs  lib.rs  pool.rs  postgres.rs  sqlite.rs
crates/datastream/: Cargo.toml
crates/datastream/src/: arrow_reader.rs  delivery.rs  graph.rs  intake.rs  intelligence.rs  lib.rs  types.rs
crates/deeplearning/: Cargo.toml  README.md  build.rs
crates/deeplearning/src/: gpu.rs  lib.rs
crates/erp/: Cargo.toml
crates/erp/src/: cache.rs  compression.rs  core.rs  reconstruction.rs  resonance.rs  training.rs  utils.rs
crates/foundation/: Cargo.toml  FOUNDATION_API_FREEZE.md  validation.rs
crates/foundation/alignment/: mod.rs
crates/foundation/compression/: mod.rs
crates/foundation/multimodal/: mod.rs
crates/foundation/reasoning/: mod.rs
crates/foundation/src/: clustering_orchestrator.rs  hallucination_integration.rs  lib.rs  mod.rs  quantization.rs
crates/foundation/tensor/: mod.rs  normalize.rs  ops.rs  reshape.rs  validation.rs
crates/foundation/traits/: Cargo.toml
crates/hallucination/: Cargo.toml
crates/hallucination/src/: in_generation.rs  lib.rs  monitoring.rs  post_generation.rs  pre_generation.rs  risk_scoring.rs  system_prompt.rs  types.rs
crates/hldva-t/: Cargo.toml
crates/hldva-t/src/: config.rs  core.rs  lib.rs  types.rs
crates/inference/: Cargo.toml
crates/inference/src/: batching.rs  beam_search.rs  blaa_integration.rs  continuous_batching.rs  decoding.rs  engine.rs  inference_trait.rs  kv_cache.rs  latency.rs  lib.rs  metrics.rs  paged_cache.rs  prefix_cache.rs  runtime.rs  sampler.rs  scheduler.rs  sequence_state.rs  session.rs  speculative_decoding.rs  stop_conditions.rs  streaming.rs  token_loop.rs
crates/inference/tests/: integration.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/common/: Cargo.toml  README.md
crates/infrastructure/src/: lib.rs
crates/infrastructure/utils/: Cargo.toml  README.md
crates/intelligence/: Cargo.toml  README_SPARO.md
crates/intelligence/benches/: end_to_end_integration.rs
crates/intelligence/docs/: ATQS-Compress_PROPOSAL.md  CAFFEINE.md  HAS_MOE_FFN_INTEGRATION.md  HIDVA-T.html  MODELS_FLOW.md  ORACLE.md  SACA.html  SACA_IMPLEMENTATION.md  SPARO.md
crates/intelligence/examples/: full_integration_example.rs  oracle_example.rs  saca_example.rs  sparo_example.rs
crates/intelligence/src/: lib.rs  unified_api.rs
crates/isolation/: Cargo.toml
crates/isolation/src/: config.rs  firewall.rs  killswitch.rs  layer0_global.rs  layer1_mode.rs  layer2_agent.rs  layer3_tool.rs  layer4_runtime.rs  layer5_cognitive.rs  layer6_permission.rs  lib.rs  multicluster.rs  quarantine.rs
crates/memory/: Cargo.toml
crates/memory/src/: cache.rs  coherence.rs  compression.rs  conservation.rs  core.rs  curvature.rs  entry.rs  episodic.rs  identity.rs  layers.rs  lib.rs  lru_memory.rs  memory.rs  memory_model.rs  meta_learning.rs  mod.rs  optimizer.rs  types.rs
crates/monitoring/: Cargo.toml  prometheus.yml
crates/monitoring/src/: health.rs  lib.rs  metrics.rs  monitoring.rs  profiling.rs  tracing.rs
crates/multimodal/: Cargo.toml
crates/multimodal/src/: lib.rs
crates/oracle/: Cargo.toml
crates/oracle/src/: alignment.rs  backbone.rs  lib.rs  trainer.rs
crates/runtime/: Cargo.toml  executor.rs  mod.rs  monitoring.rs  resource.rs  scheduler.rs
crates/runtime/src/: executor.rs  kv_cache.rs  lib.rs  monitoring.rs  resource.rs  scheduler.rs  streaming.rs
crates/runtime/tests/: stress.rs
crates/shared/: Cargo.toml
crates/shared/src/: agent_coordinator.rs  agent_types.rs  base_agent.rs  base_model.rs  capability_spec.rs  foundation_components.rs  gnac_integration.rs  model_config.rs  model_registry.rs  safety_gate.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: bpe_tokenizer.rs  lib.rs  pretokenizer.rs  special_tokens.rs  tokenizer_core.rs  (+4 more)
crates/training/: Cargo.toml
(+822 files in other folders)
