[workspace]
resolver = "2"
exclude = ["crates/Telemetry"]
members = [
    "crates/agent",
    "crates/api",
    "crates/atqs",
    "crates/blaa",
    "crates/core",
    "crates/cognition",
    "crates/database",
    "crates/deeplearning",
    "crates/erp",
    "crates/foundation",
    "crates/inference",
    "crates/intelligence",
    "crates/memory",
    "crates/monitoring",
    "crates/runtime",
    "crates/tokenizer",
    "crates/infrastructure",
    "crates/infrastructure/common",
    "crates/infrastructure/utils",
    "crates/datastream",
    "crates/hallucination",
    "crates/has-moe-ffn",
    "crates/hldva-t",
    "crates/shared",
    "crates/validation",
    "crates/multimodal",
    "crates/oracle",
    "crates/training",
    "crates/alignment",
    "crates/traits",
    "crates/transformer",
    "crates/vogp",
    "crates/quantization",
    "crates/isolation",
    "apps/nexora-ai",
    "apps/dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nexora AI Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexora-ai/nexora"

[workspace.metadata]
docs-rs = { all-features = true }


[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros", "net", "signal", "time"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Concurrency
rayon = "1.8"
crossbeam = "0.8"
# Math/tensor operations
ndarray = { version = "0.15", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Testing
mockall = "0.12"
proptest = "1.4"
tempfile = "3.8"
# Performance
parking_lot = "0.12"
once_cell = "1.19"
# Text processing
regex = "1.10"
unicode-segmentation = "1.11"
smallvec = { version = "1.0", features = ["serde"] }
# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
# Async traits
async-trait = "0.1"
# Async utilities
futures = "0.3"
# Random
rand = "0.8"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-br", "trace"] }
# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql", "chrono", "uuid"] }
postgres = "0.19"
mysql = "25"
# HTTP client (untuk API requests)
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }

# Dataset streaming
zstd = "0.13"
lz4_flex = "0.11"
flate2 = "1.0"
memmap2 = "0.9"
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"

# Terminal UI dependencies
ratatui = "0.26"
crossterm = "0.27"
tui-input = "0.8"
arboard = "3.3"  # For clipboard access
sysinfo = "0.30"  # For system monitoring
psutil = "3.2"    # For process stats
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
