[package]
name = "nexora-agent"
version = "0.1.0"
edition = "2021"
description = "Agent layer for behavior and coordination in Nexora AI"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures = "0.3"
parking_lot.workspace = true
crossbeam.workspace = true
chrono.workspace = true
rand = "0.8"
regex = "1.0"
reqwest.workspace = true

# Internal dependencies
nexora-core = { path = "../core" }
nexora-intelligence = { path = "../intelligence" }
nexora-memory = { path = "../memory" }
nexora-common = { path = "../infrastructure/common" }

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
