[package]
name = "nexora-alignment"
version = "0.1.0"
edition = "2021"
description = "Alignment frameworks for Nexora - SPARO (RLAIF, SPIN, DPO, IPO, KTO, RLVF)"

[dependencies]
nexora-shared = { path = "../shared" }
serde.workspace = true
anyhow.workspace = true
ndarray.workspace = true
rand.workspace = true
uuid.workspace = true
tracing.workspace = true
chrono.workspace = true
bincode = "1.3"
async-trait.workspace = true
