[package]
name = "nexora-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "sync", "signal", "macros"] }
tracing = "0.1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
rustc_version_runtime = "0.2"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.0"
rand = "0.8"
async-trait = "0.1"
# Compression support
flate2 = "1.0"
# Infrastructure
nexora-infrastructure = { path = "../infrastructure" }

[features]
default = ["cors", "metrics"]
cors = []
metrics = []
tls = ["tokio-rustls", "axum-server", "rustls-pemfile", "rcgen", "time"]
rustls = ["tokio-rustls"]

[dependencies.tokio-rustls]
version = "0.24"
optional = true

[dependencies.axum-server]
version = "0.6"
optional = true
features = ["tls-rustls"]

[dependencies.rustls-pemfile]
version = "1.0"
optional = true

[dependencies.rcgen]
version = "0.12"
optional = true

[dependencies.time]
version = "0.3"
optional = true

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["net", "rt-multi-thread", "sync", "signal", "macros"] }
futures = "0.3"
