[package]
name = "nexora-atqs"
version = "0.1.0"
edition = "2021"
description = "Advanced Tensor Quantization System (ATQS)"

[dependencies]
ndarray.workspace = true
ndarray-rand = "0.15"
rand.workspace = true
rand_distr = "0.4"
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
fastrand = "2.0"
serde_yaml = "0.9"
serde_json.workspace = true
