[package]
name = "nexora-cognition"
version = "0.1.0"
edition = "2021"
description = "Cognition layer - planning, reflection, context, reasoning for Nexora AI"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true

nexora-foundation = { path = "../foundation" }
