[package]
name = "nexora-core"
version = "0.1.0"
edition = "2021"
description = "Core controller for Nexora AI system"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
crossbeam.workspace = true
ndarray.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
uuid.workspace = true
async-trait.workspace = true
rand.workspace = true
# Email notifications
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
# URL parsing for email config
url = "2.5"
# HTTP client for webhook notifications
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
