[package]
name = "nexora-core"
version = "0.1.0"
edition = "2021"
description = "Core controller for Nexora AI system"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
uuid.workspace = true
async-trait.workspace = true
rand.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
