[package]
name = "nexora-data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
regex = "1.0"
rand = "0.8"
async-trait = "0.1"
