[package]
name = "nexora-database"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
secrecy = "0.8"
# Date/time parsing
chrono = { version = "0.4", features = ["serde"] }

# Database drivers (optional)
tokio-postgres = { version = "0.7", optional = true }
rusqlite = { version = "0.29", features = ["bundled"], optional = true }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite"], optional = true }
mysql = { version = "25", optional = true }
futures = "0.3"

[features]
default = ["postgres", "sqlite", "sqlx"]
postgres = ["tokio-postgres"]
sqlite = ["rusqlite"]
sqlx = ["dep:sqlx"]
mysql = ["dep:mysql"]
all = ["postgres", "sqlite", "sqlx", "mysql"]
