[package]
name = "nexora-deeplearning"
version = "0.1.0"
edition = "2021"
authors = ["Nexora AI Team"]
description = "Deep Learning Library for Nexora AI - STAR-X and RNN implementations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nexora-ai/nexora-ai"
homepage = "https://nexora.ai"
documentation = "https://docs.nexora.ai/deeplearning"
keywords = ["deep-learning", "neural-networks", "star-x", "gnac", "rnn", "ai", "machine-learning", "no-code", "architecture-search"]
categories = ["science", "algorithms", "mathematics"]
readme = "README.md"

[dependencies]
# Core dependencies
ndarray = { version = "0.15", features = ["serde", "blas"] }
ndarray-rand = "0.14"
num-traits = "0.2"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Math and scientific computing
rand = "0.8"
rand_chacha = "0.3"
once_cell = "1.19"
num_cpus = "1.16"
itertools = "0.12"
half = "2"

# BLAS acceleration (libopenblas-dev required on system)
# Uses raw pkg-config in build.rs for reliable linking in all build targets
cblas = { version = "0.1", optional = true }

# GPU compute backend (wgpu — cross-platform: NVIDIA, AMD, Intel, Apple)
wgpu = { version = "29", optional = true, default-features = false, features = ["wgsl"] }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", optional = true }

# Utilities
md5 = "0.7"

# External benchmark dependencies (optional)
candle-core = { version = "0.4", optional = true }
tch = { version = "0.24", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
tempfile = "3.8"
rand = "0.8"



[features]
# Core features
default = ["std", "serde"]
std = []
serde = ["dep:serde"]

# Development features
benchmarks = ["std"]

# Experimental features
experimental = []
nightly = []

# GPU acceleration (wgpu — cross-platform: NVIDIA, AMD, Intel, Apple Silicon)
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]

# Full feature set
full = ["std", "serde", "gpu"]

[lib]
name = "nexora_deeplearning"
path = "src/lib.rs"

# Examples
# Note: Examples will be added when the implementation is complete



[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
ignored = ["cudarc", "blas"]

