[package]
name = "nexora-foundation"
version = "0.1.0"
edition = "2021"
description = "Foundation AI frameworks and shared utilities for Nexora AI"

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
ndarray.workspace = true
ndarray-rand = "0.15"
rand_distr = "0.4"
tracing.workspace = true
uuid.workspace = true

# Internal dependencies
nexora-core = { path = "../core" }
nexora-common = { path = "../infrastructure/common" }
nexora-deeplearning = { path = "../deeplearning" }

# Framework-specific dependencies
async-trait.workspace = true
rand.workspace = true
regex.workspace = true
once_cell = "1"
chrono.workspace = true
futures.workspace = true

# Compression (ATQS) dependencies
flate2 = "1.0"
fastrand = "2.0"
serde_yaml = "0.9"

# Multimodal (CAFFEINE) dependencies
unicode-segmentation.workspace = true

# Reasoning (SACA) dependencies
crossbeam.workspace = true
parking_lot.workspace = true

# Alignment (SPARO) dependencies
md5 = "0.7"

# Cache dependencies
lru = "0.12"

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

