[package]
name = "nexora-memory"
version = "0.1.0"
edition = "2021"
description = "Memory management for Nexora AI system"

[dependencies]
nexora-core = { path = "../core" }
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
tracing.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
uuid.workspace = true
rand.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
