[package]
name = "nexora-monitoring"
version = "0.1.0"
edition = "2021"
description = "Monitoring system for Nexora AI"

[dependencies]
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
prometheus = "0.13"
