[package]
name = "nexora-multimodal"
version = "0.1.0"
edition = "2021"
description = "Multimodal AI framework for Nexora - Caffeine (vision, audio, video, text encoders, Q-Former, action head)"

[dependencies]
nexora-shared = { path = "../shared" }
nexora-atqs = { path = "../atqs" }
nexora-has-moe-ffn = { path = "../has-moe-ffn" }
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
ndarray.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true
serde_json.workspace = true
rand.workspace = true
