[package]
name = "nexora-oracle"
version = "0.1.0"
edition = "2021"
description = "ORACLE - Optimized Retrieval-Augmented Code Learning Engine"

[dependencies]
anyhow.workspace = true
ndarray.workspace = true
serde.workspace = true
rand.workspace = true
uuid.workspace = true
ndarray-rand = "0.15"
regex.workspace = true
once_cell = "1.19"
chrono.workspace = true
serde_json.workspace = true
