[package]
name = "nexora-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime abstraction and infrastructure layer for Nexora AI"

[dependencies]
# Core dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

# Runtime-specific dependencies
async-trait.workspace = true
rand.workspace = true
num_cpus = "1.16"

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
criterion = { version = "0.5", features = ["html_reports"] }

