[package]
name = "nexora-shared"
version = "0.1.0"
edition = "2021"
description = "Shared model components for Nexora Foundation - base model types, agent types, foundation components"

[dependencies]
nexora-erp = { path = "../erp" }
nexora-vogp = { path = "../vogp" }
nexora-atqs = { path = "../atqs" }
nexora-has-moe-ffn = { path = "../has-moe-ffn" }
nexora-deeplearning = { path = "../deeplearning" }
nexora-tokenizer = { path = "../tokenizer" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
rand.workspace = true
ndarray.workspace = true
