[package]
name = "nexora-tokenizer"
version = "0.1.0"
edition = "2021"
description = "Tokenizer for Nexora AI system"

[dependencies]
nexora-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
regex.workspace = true
unicode-segmentation.workspace = true
rand.workspace = true
smallvec.workspace = true

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true
